fixed minor issue with start page heading on mobile

--- a/themes/amar-theme/assets/sass/_dark.scss
+++ b/themes/amar-theme/assets/sass/_dark.scss
@@ -8,4 +8,5 @@ span#dark-mode-toggle {
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
+    line-height: inherit;
 }
